--- a/Day_001_HW.ipynb
+++ b/Day_001_HW.ipynb
@@ -200,12 +200,16 @@
     "想像你經營一個自由載客車隊，你希望能透過數據分析以提升業績，請你思考並描述你如何規劃整體的分析/解決方案：\n",
     "\n",
     "1. 核心問題為何 (tips：如何定義 「提升業績 & 你的假設」)\n",
-    "\n",
+    "   Ans:假設問題是載客率不高，路上跑的空車太多．\n",
+    "   \n",
     "2. 資料從何而來 (tips：哪些資料可能會對你想問的問題產生影響 & 資料如何蒐集)\n",
-    "\n",
+    "   Ans: 透過APP的叫車服務和後台人員手動輸入．\n",
+    "   \n",
     "3. 蒐集而來的資料型態為何\n",
-    "\n",
-    "4. 你要回答的問題，其如何評估 (tips：你的假設如何驗證)"
+    "   Ans:結構化資料需要檢視欄欄位意義以及名稱，定義上車時間、下車時間、本程收費、年齡\n",
+    "       \n",
+    "4. 你要回答的問題，其如何評估 (tips：你的假設如何驗證)\n",
+    "   Ans: "
    ]
   },
   {
