--- a/Day_001_HW.ipynb
+++ b/Day_001_HW.ipynb
@@ -184,32 +184,32 @@
     "https://www.kaggle.com/AnalyzeBoston/crimes-in-boston#offense_codes.csv\n",
     "\n",
     "1. 你選的這組資料為何重要\n",
-    "   Ans:我選擇Crimes in Boston,這是關於社會安全的犯罪資料統計\n",
+    "   <font color=\"red\">Ans:我選擇Crimes in Boston,這是關於社會安全的犯罪資料統計</font>\n",
     "   \n",
     "2. 資料從何而來 (tips: 譬如提供者是誰、以什麼方式蒐集)\n",
-    "   Ans:由Boston Police Department (BPD) 所提供，記錄犯罪所發生的時間與地點\n",
+    "   <font color=\"red\">Ans:由Boston Police Department (BPD) 所提供，記錄犯罪所發生的時間與地點</font>\n",
     "\n",
     "3. 蒐集而來的資料型態為何\n",
-    "   Ans:結構化資料需要檢視欄欄位意義以及名稱\n",
+    "   <font color=\"red\">Ans:結構化資料需要檢視欄欄位意義以及名稱</font>\n",
     "\n",
     "4. 這組資料想解決的問題如何評估\n",
-    "   \n",
+    "   <font color=\"red\">統計犯罪的類型、頻率，可以用來降低犯罪機率發生或是減少犯罪的次數</font>\n",
     "\n",
     "# [作業3]\n",
     "\n",
-    "想像你經營一個自由載客車隊，你希望能透過數據分析以提升業績，請你思考並描述你如何規劃整體的分析/解決方案：\n",
+    " 想像你經營一個自由載客車隊，你希望能透過數據分析以提升業績，請你思考並描述你如何規劃整體的分析/解決方案：\n",
     "\n",
     "1. 核心問題為何 (tips：如何定義 「提升業績 & 你的假設」)\n",
-    "   Ans:假設問題是載客率不高，路上跑的空車太多．\n",
+    "   <font color=\"red\">Ans:假設問題是載客率不高，路上跑的空車太多．</font>\n",
     "   \n",
     "2. 資料從何而來 (tips：哪些資料可能會對你想問的問題產生影響 & 資料如何蒐集)\n",
-    "   Ans: 透過APP的叫車服務和後台人員手動輸入．\n",
+    "   <font color=\"red\">Ans: 透過APP的叫車服務和後台人員手動輸入．</font>\n",
     "   \n",
     "3. 蒐集而來的資料型態為何\n",
-    "   Ans:結構化資料需要檢視欄欄位意義以及名稱，定義上車時間、下車時間、本程收費、年齡\n",
+    "   <font color=\"red\">Ans:結構化資料需要檢視欄欄位意義以及名稱，定義上車時間、下車時間、本程收費、年齡</font>\n",
     "       \n",
     "4. 你要回答的問題，其如何評估 (tips：你的假設如何驗證)\n",
-    "   Ans: "
+    "   <font color=\"red\">Ans:利用指標來驗證是否有關連 </font>"
    ]
   },
   {
